force-app/main/default/objects/AnkenMeisai__c/fields/CurrencyConversionSelling__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConversionSelling__c</fullName>
    <label>CURRENCY CONVERSION FOR SELLING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CurrencyConversion</valueSetName>
    </valueSet>
</CustomField>