force-app/main/default/objects/AnkenMeisai__c/fields/DataUpdateStatusBillToQL__c.field-meta.xml
<CustomField>
    <fullName>DataUpdateStatusBillToQL__c</fullName>
    <label>DATA UPDATE STATUS FROM BILLING TO QUOTE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DataUpdateStatusBillToQL</valueSetName>
    </valueSet>
</CustomField>