force-app/main/default/objects/AnkenMeisai__c/fields/DebitNo__c.field-meta.xml
<CustomField>
    <fullName>DebitNo__c</fullName>
    <label>Debit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>