force-app/main/default/objects/AnkenMeisai__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>This will appear in Debit Note to local customer.</inlineHelpText>
    <label>DESCRIPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>