force-app/main/default/objects/AnkenMeisai__c/fields/ExchangeRateBuyingUpdate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateBuyingUpdate__c</fullName>
    <label>EXCHANGE RATE BUYING-UPDATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExchangeRateBuyingUpdate</valueSetName>
    </valueSet>
</CustomField>