force-app/main/default/objects/AnkenMeisai__c/fields/ExchangeRateID__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXCHANGE RATE ID-DEBIT/CREDIT</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>MgmtMaster__c.Mgmt_Exrate_Validity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>MgmtMaster__c.Mgmt_Exrate_Validity__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MgmtMaster__c</referenceTo>
    <relationshipLabel>F/TMS BILL (EXCHANGE RATE ID-DEBIT/CREDIT)</relationshipLabel>
    <relationshipName>BILLING_FMS_TMS_DEBITCREDIT</relationshipName>
    <type>Lookup</type>
</CustomField>