force-app/main/default/objects/AnkenMeisai__c/fields/ExchangeRateSellingUpdate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateSellingUpdate__c</fullName>
    <label>EXCHANGE RATE SELLING-UPDATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExchangeRateSellingUpdate</valueSetName>
    </valueSet>
</CustomField>