force-app/main/default/objects/AnkenMeisai__c/fields/ExchangeRequiredForBuying__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRequiredForBuying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EXCHANGE REQUIRED FOR BUYING</label>
    <type>Checkbox</type>
</CustomField>