force-app/main/default/objects/AnkenMeisai__c/fields/FxrateBuying3rdCurrencyLocal__c.field-meta.xml
<CustomField>
    <fullName>FxrateBuying3rdCurrencyLocal__c</fullName>
    <label>Fxrate-Buying(3rd Currency-Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>