force-app/main/default/objects/AnkenMeisai__c/fields/InboundVATInvNo__c.field-meta.xml
<CustomField>
    <fullName>InboundVATInvNo__c</fullName>
    <label>INBOUND VAT INV NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>