force-app/main/default/objects/AnkenMeisai__c/fields/InsatuyouSyohin__c.field-meta.xml
<CustomField>
    <fullName>InsatuyouSyohin__c</fullName>
    <inlineHelpText>Used for Invoice and Quotation for local customers. If this field is blank, it will refer the Service Name At Print(Local) in Service Master Object</inlineHelpText>
    <label>PRICING NAME AT PRINT(LOCAL)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>