force-app/main/default/objects/AnkenMeisai__c/fields/InsatuyouSyohinEng__c.field-meta.xml
<CustomField>
    <fullName>InsatuyouSyohinEng__c</fullName>
    <inlineHelpText>Used for Quotation or Debit/Credit for partners.</inlineHelpText>
    <label>PRICING NAME AT PRINT(ENG)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>