force-app/main/default/objects/AnkenMeisai__c/fields/Invoice_Destination_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Destination_Type__c</fullName>
    <label>Invoice Destination Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>