force-app/main/default/objects/AnkenMeisai__c/fields/Invoiceto_type__c.field-meta.xml
<CustomField>
    <fullName>Invoiceto_type__c</fullName>
    <formula>text(Seikyusaki__r.Custom_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CATEGORY OF INVOICE TO</label>
    <type>Text</type>
</CustomField>