force-app/main/default/objects/AnkenMeisai__c/fields/KawaseBay__c.field-meta.xml
<CustomField>
    <fullName>KawaseBay__c</fullName>
    <inlineHelpText>Buying Ex-rate. If Default Invoice Issued Date(Default ‘Today’) is in the period of active EX-Rate Mgmt record, Ex-rate is automatically synchronized. Default Invoice Issued Date can be updated from Fixed Invoice Issue Date(If Fixed).</inlineHelpText>
    <label>EXCHANGE RATE-BUYING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>