force-app/main/default/objects/AnkenMeisai__c/fields/Last_Sent_Uncollected_Charge_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Last_Sent_Uncollected_Charge_Reminder__c</fullName>
    <label>Last Sent Uncollected Charge Reminder</label>
    <type>Date</type>
</CustomField>