force-app/main/default/objects/AnkenMeisai__c/fields/MASTER_B_L__c.field-meta.xml
<CustomField>
    <fullName>MASTER_B_L__c</fullName>
    <formula>Anken__r.MBL_Number_SEA_AIR__c</formula>
    <label>MASTER B/L</label>
    <type>Text</type>
</CustomField>