force-app/main/default/objects/AnkenMeisai__c/fields/OutboundVATInvNo__c.field-meta.xml
<CustomField>
    <fullName>OutboundVATInvNo__c</fullName>
    <label>OUTBOUND VAT INV NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>