force-app/main/default/objects/AnkenMeisai__c/fields/PartnerCredit__c.field-meta.xml
<CustomField>
    <fullName>PartnerCredit__c</fullName>
    <formula>IF (CONTAINS(TEXT(PaymentTo__r.Business_Relationship__c), &apos;Partner&apos;),BuyAmountUSD__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>