force-app/main/default/objects/AnkenMeisai__c/fields/PartnerCreditJPN__c.field-meta.xml
<CustomField>
    <fullName>PartnerCreditJPN__c</fullName>
    <formula>BuyAmountJPN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreditJPN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>