force-app/main/default/objects/AnkenMeisai__c/fields/PartnerDebit__c.field-meta.xml
<CustomField>
    <fullName>PartnerDebit__c</fullName>
    <formula>IF ( CONTAINS(TEXT(Seikyusaki__r.Business_Relationship__c), &apos;Partner&apos;),SellAmountUSD__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>