force-app/main/default/objects/AnkenMeisai__c/fields/PartnerDebitJPN__c.field-meta.xml
<CustomField>
    <fullName>PartnerDebitJPN__c</fullName>
    <formula>SellAmountJPN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DebitJPN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>