force-app/main/default/objects/AnkenMeisai__c/fields/PartnerProduct__c.field-meta.xml
<CustomField>
    <fullName>PartnerProduct__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, it will show in the Check-Yes Invoice. If not checked it will show in the Check-No Invoice</inlineHelpText>
    <label>CHECK</label>
    <type>Checkbox</type>
</CustomField>