force-app/main/default/objects/AnkenMeisai__c/fields/PartnerSeisanUSD__c.field-meta.xml
<CustomField>
    <fullName>PartnerSeisanUSD__c</fullName>
    <formula>IF ( AND(CONTAINS(TEXT(Seikyusaki__r.Business_Relationship__c), &apos;Partner&apos;), CONTAINS(TEXT(PaymentTo__r.Business_Relationship__c), &apos;Partner&apos;)), SellAmountUSD__c - BuyAmountUSD__c, IF ( CONTAINS(TEXT(Seikyusaki__r.Business_Relationship__c), &apos;Partner&apos;), SellAmountUSD__c, IF (CONTAINS(TEXT(PaymentTo__r.Business_Relationship__c), &apos;Partner&apos;), -1 * BuyAmountUSD__c, 10 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>請求先と支払先の「種別」を見て、海外パートナーとのバランスの金額(USD)を表示します。
どちらも国内の場合は0で表示されます。</inlineHelpText>
    <label>BALANCE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>