force-app/main/default/objects/AnkenMeisai__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Input the actual company name who transferred to your company account</inlineHelpText>
    <label>ACTUAL PAYMENT TRANSFERED FROM-SELLING</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Payer</relationshipName>
    <type>Lookup</type>
</CustomField>