force-app/main/default/objects/AnkenMeisai__c/fields/PayingBank__c.field-meta.xml
<CustomField>
    <fullName>PayingBank__c</fullName>
    <inlineHelpText>Choose the Bank Account which has the actual payment history. 
How to register Bank Account in use.
1.Go to  Quick Access Menu on the right side of screen
2.Click Vew Fields
3.Click BANK ACCOUNT TRANSFRED FROM-BUYING
4.Go to Picklist Values--&gt;edit</inlineHelpText>
    <label>BANK ACCOUNT TRANSFRED FROM-BUYING(old)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank A</fullName>
            </value>
            <value>
                <fullName>Bank B</fullName>
            </value>
            <value>
                <fullName>Bank C</fullName>
            </value>
            <value>
                <fullName>Bank D-USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>