force-app/main/default/objects/AnkenMeisai__c/fields/payment_category__c.field-meta.xml
<CustomField>
    <fullName>payment_category__c</fullName>
    <label>PAYMENT TYPE-BUYING</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>口座振込</fullName>
                <label>Bank Transfer</label>
            </value>
            <value>
                <fullName>現金</fullName>
                <label>Cash</label>
            </value>
            <value>
                <fullName>相殺</fullName>
                <label>Payment Offset</label>
            </value>
            <value>
                <fullName>前払い口座から自動引落</fullName>
                <label>Advanced Payment</label>
            </value>
            <value>
                <fullName>振込手数料</fullName>
                <label>Bank Transfer Charge</label>
            </value>
            <value>
                <fullName>Deposit Offset</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>