force-app/main/default/objects/AnkenMeisai__c/fields/Payment_to_Short_name__c.field-meta.xml
<CustomField>
    <fullName>Payment_to_Short_name__c</fullName>
    <label>Payment to (Short name)-Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>