force-app/main/default/objects/AnkenMeisai__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <inlineHelpText>Enter the actual payment settlement date in the bank account.</inlineHelpText>
    <label>PAYMENT SETTLED DATE-BUYING</label>
    <type>Date</type>
</CustomField>