force-app/main/default/objects/AnkenMeisai__c/fields/PaymenttoShortname__c.field-meta.xml
<CustomField>
    <fullName>PaymenttoShortname__c</fullName>
    <formula>PaymentTo__r.CompanyShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment to (Short name)</label>
    <type>Text</type>
</CustomField>