force-app/main/default/objects/AnkenMeisai__c/fields/PricingRecordType__c.field-meta.xml
<CustomField>
    <fullName>PricingRecordType__c</fullName>
    <formula>Tariff__r.RecordType.Name</formula>
    <label>PRICING RECORD TYPE</label>
    <type>Text</type>
</CustomField>