force-app/main/default/objects/AnkenMeisai__c/fields/PrintFlag__c.field-meta.xml
<CustomField>
    <fullName>PrintFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, it will show in the Invoice. If not checked, it will not show in the invoices.</inlineHelpText>
    <label>PRINT</label>
    <type>Checkbox</type>
</CustomField>