force-app/main/default/objects/AnkenMeisai__c/fields/ProductSyobunrui__c.field-meta.xml
<CustomField>
    <fullName>ProductSyobunrui__c</fullName>
    <formula>TEXT( Tariff__r.Subcategory__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-CATEGORY</label>
    <type>Text</type>
</CustomField>