force-app/main/default/objects/AnkenMeisai__c/fields/ProductTax__c.field-meta.xml
<CustomField>
    <fullName>ProductTax__c</fullName>
    <formula>TEXT( Tariff__r.Zeibunrui__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tax category is automatically synchronized with Type Category in Service Master Object. In case FCY settlement involved, the Tax Category must be Tax-Free. The Tax Category can be modified at Service Master.</inlineHelpText>
    <label>TAX</label>
    <type>Text</type>
</CustomField>