force-app/main/default/objects/AnkenMeisai__c/fields/PROFIT_USD__c.field-meta.xml
<CustomField>
    <fullName>PROFIT_USD__c</fullName>
    <formula>ROUND(SellAmountUSD__c,2) - ROUND(BuyAmountUSD__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profit(FCY)=Total Amount of Selling(FCY)-Total Amount of Buying(FCY)</inlineHelpText>
    <label>PROFIT(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>