force-app/main/default/objects/AnkenMeisai__c/fields/ProfitRatioIncludeTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioIncludeTaxUSD__c</fullName>
    <formula>IF (SellInTaxAmount_USD__c = null || SellInTaxAmount_USD__c = 0, 0, ( SellInTaxAmount_USD__c - BuyInTaxAmountUSD__c) / SellInTaxAmount_USD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Ratio Include Tax (USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>