force-app/main/default/objects/AnkenMeisai__c/fields/ProfitRatioUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioUSD__c</fullName>
    <formula>IF (SellAmountUSD__c = null || SellAmountUSD__c = 0, 0, ( SellAmountUSD__c - BuyAmountUSD__c ) / SellAmountUSD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Ratio (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>