force-app/main/default/objects/AnkenMeisai__c/fields/QuoteLineID__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QUOTE LINE ID</label>
    <referenceTo>QuoteLine__c</referenceTo>
    <relationshipLabel>F/TMS BILL</relationshipLabel>
    <relationshipName>FTMSBill</relationshipName>
    <type>Lookup</type>
</CustomField>