force-app/main/default/objects/AnkenMeisai__c/fields/ReceiptanceDate_del__c.field-meta.xml
<CustomField>
    <fullName>ReceiptanceDate_del__c</fullName>
    <inlineHelpText>Enter the actual receipt settlement date in the bank account.</inlineHelpText>
    <label>PAYMENT SETTLED DATE-SELLING</label>
    <type>Date</type>
</CustomField>