force-app/main/default/objects/AnkenMeisai__c/fields/Recordtype__c.field-meta.xml
<CustomField>
    <fullName>Recordtype__c</fullName>
    <formula>Anken__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RECORD TYPE</label>
    <type>Text</type>
</CustomField>