force-app/main/default/objects/AnkenMeisai__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <description>This Debit number which received from Parter (used for update AP)</description>
    <label>Ref No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>