force-app/main/default/objects/AnkenMeisai__c/fields/Reference_Price__c.field-meta.xml
<CustomField>
    <fullName>Reference_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Price</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Tariff__c</field>
            <operation>equals</operation>
            <valueField>ReferencePrice__c.Servicename__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ReferencePrice__c</referenceTo>
    <relationshipLabel>F/TMS BILL</relationshipLabel>
    <relationshipName>F_TMS_BILL</relationshipName>
    <type>Lookup</type>
</CustomField>