force-app/main/default/objects/AnkenMeisai__c/fields/RiekirituMisei__c.field-meta.xml
<CustomField>
    <fullName>RiekirituMisei__c</fullName>
    <formula>IF (SellAmountJPN__c  = null || SellAmountJPN__c  = 0, 0, ( SellAmountJPN__c  -  BuyAmountJPN__c ) / SellAmountJPN__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profit Ratio=Profit(Local)/Total Amount of Selling(Local)</inlineHelpText>
    <label>PROFIT RATIO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>