force-app/main/default/objects/AnkenMeisai__c/fields/SalesAccountedDate__c.field-meta.xml
<CustomField>
    <fullName>SalesAccountedDate__c</fullName>
    <formula>Anken__r.SalesAccountedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Accounted Date(will be deleted)</label>
    <type>Date</type>
</CustomField>