force-app/main/default/objects/AnkenMeisai__c/fields/SalesAccountedDateInvoicing__c.field-meta.xml
<CustomField>
    <fullName>SalesAccountedDateInvoicing__c</fullName>
    <label>SALES ACCOUNTED DATE-INVOICING</label>
    <type>Date</type>
</CustomField>