force-app/main/default/objects/AnkenMeisai__c/fields/SeikyuBangou__c.field-meta.xml
<CustomField>
    <fullName>SeikyuBangou__c</fullName>
    <inlineHelpText>Input the number and determine the order of the Selling/Buying item in invoice.</inlineHelpText>
    <label>INVOICE S/B DISPLAY NO</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>