force-app/main/default/objects/AnkenMeisai__c/fields/Seikyusaki__c.field-meta.xml
<CustomField>
    <fullName>Seikyusaki__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Export and Not EXW--&gt;Set shipper
Export and EXW--&gt;Set Partner
Import and Not DDP/DDU--&gt;Set Consignee
Import &amp; DDP/DDU--&gt;Set Partner</inlineHelpText>
    <label>INVOICE TO</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CustomerB2B</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>F/TMS BILL (INVOICE TO)</relationshipLabel>
    <relationshipName>Seikyusakis</relationshipName>
    <type>Lookup</type>
</CustomField>