force-app/main/default/objects/AnkenMeisai__c/fields/SellAmountJPN__c.field-meta.xml
<CustomField>
    <fullName>SellAmountJPN__c</fullName>
    <formula>ROUND(Suryo__c * SellTankaJPY__c ,0)+ TotalAmountofSellingLocalAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of Selling(Local)=Unit Price of Selling(Local)*Charge Unit (Total). This amount is before Tax.If Tax-Free or Non-Tax, Total Amount of Selling(Local) will be equal to Amount Selling including Tax(Local).</inlineHelpText>
    <label>TOTAL AMOUNT OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>