force-app/main/default/objects/AnkenMeisai__c/fields/SellAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>SellAmountUSD__c</fullName>
    <formula>ROUND(Suryo__c * SellTankaUSD__c,3)+ TotalAmountofSellingFCYAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of Selling(FCY)=Unit Price Of selling(Local)*Charge Unit (Total).</inlineHelpText>
    <label>TOTAL AMOUNT OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>