force-app/main/default/objects/AnkenMeisai__c/fields/SellDetail__c.field-meta.xml
<CustomField>
    <fullName>SellDetail__c</fullName>
    <label>PAYMENT NOTES-SELLING</label>
    <type>TextArea</type>
</CustomField>