force-app/main/default/objects/AnkenMeisai__c/fields/SellDifferentiation__c.field-meta.xml
<CustomField>
    <fullName>SellDifferentiation__c</fullName>
    <formula>SellInTaxAmountJPY__c - Nyukingaku__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unpaid Balance of Selling(Local)=Amount Selling including Tax(Local)-Amount Paid-Selling(Local)</inlineHelpText>
    <label>UNPAID BALANCE OF SELLING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>