force-app/main/default/objects/AnkenMeisai__c/fields/selling_credit_category_accouting__c.field-meta.xml
<CustomField>
    <fullName>selling_credit_category_accouting__c</fullName>
    <label>SELLING-THE CREDIT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>売上高</fullName>
                <label>SALES</label>
            </value>
            <value>
                <fullName>売掛</fullName>
                <label>ACCOUNTS RECEIVABLE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>