force-app/main/default/objects/AnkenMeisai__c/fields/Selling_Tatekae__c.field-meta.xml
<CustomField>
    <fullName>Selling_Tatekae__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if selling item is an advance payment(such as customs duty, Tax)</inlineHelpText>
    <label>DUTY SELLING FOR ADVANCE PAYMENT</label>
    <type>Checkbox</type>
</CustomField>