force-app/main/default/objects/AnkenMeisai__c/fields/SellingBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>SellingBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>SELLING BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>