force-app/main/default/objects/AnkenMeisai__c/fields/SellingCreditAccoutingCode__c.field-meta.xml
<CustomField>
    <fullName>SellingCreditAccoutingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>SELLING_CREDIT</relationshipName>
    <type>Lookup</type>
</CustomField>