force-app/main/default/objects/AnkenMeisai__c/fields/SellingVATCreditAccountingcode__c.field-meta.xml
<CustomField>
    <fullName>SellingVATCreditAccountingcode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING VAT CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>SellingVATCreditAccountingcode</relationshipName>
    <type>Lookup</type>
</CustomField>